# ghost-cms-publisher

./: .env.example  .gitattributes  .gitignore  .mcp.json  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  _typos.toml  clippy.toml  committed.toml  deny.toml  lefthook.yml  mise.toml  release-plz.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  release-plz.yml  release.yml
blog/posts/: hello-ghost-cms.md
crates/ghost-cms-cli/: Cargo.toml
crates/ghost-cms-cli/src/: cli.rs  command.rs  commands.rs  ctx.rs  editor.rs  error.rs  main.rs  output.rs  pick.rs  ui.rs
crates/ghost-cms-cli/src/commands/: delete.rs  doctor.rs  edit.rs  get.rs  init.rs  list.rs  meta.rs  new.rs  open.rs  publish.rs  tags.rs  upload.rs  watch.rs  whoami.rs
crates/ghost-cms-cli/tests/: cli.rs
crates/ghost-cms-cli/tests/snapshots/: cli__get_detail.snap  cli__get_json.snap
crates/ghost-cms-core/: Cargo.toml
crates/ghost-cms-core/src/: auth.rs  client.rs  config.rs  constants.rs  domain.rs  error.rs  frontmatter.rs  hash.rs  images.rs  lib.rs  markdown.rs  media.rs  publish.rs  transport.rs
crates/ghost-cms-core/src/client/: media.rs  posts.rs  site.rs  tags.rs
crates/ghost-cms-core/src/domain/: envelope.rs  meta.rs  post.rs  site.rs  tag.rs
crates/ghost-cms-core/src/publish/: execute.rs  plan.rs
crates/ghost-cms-core/tests/: client_wiremock.rs
crates/ghost-cms-mcp/: Cargo.toml
crates/ghost-cms-mcp/src/: args.rs  error.rs  main.rs  server.rs  tools.rs
crates/ghost-cms-shared/: Cargo.toml
crates/ghost-cms-shared/src/: config.rs  error.rs  lib.rs  media.rs  paths.rs  render.rs  tag.rs  text.rs  upload.rs
crates/ghost-cms-shared/tests/: projections.rs
