[workspace]
resolver = "3"
members = [
    "crates/ghost-cms-cli",
    "crates/ghost-cms-core",
    "crates/ghost-cms-mcp",
    "crates/ghost-cms-shared",
]
default-members = ["crates/ghost-cms-core", "crates/ghost-cms-shared", "crates/ghost-cms-cli"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/P4suta/ghost-cms-publisher"
authors = ["ghost-cms-publisher contributors"]

[workspace.dependencies]
# --- in-house crates ---
ghost-cms-core = { path = "crates/ghost-cms-core" }
ghost-cms-shared = { path = "crates/ghost-cms-shared" }

# --- async runtime / HTTP ---
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

# --- auth / crypto ---
hex = "0.4"
jsonwebtoken = "9"
sha2 = "0.10"

# --- content ---
comrak = "0.30"
regex = "1"

# --- serialization / schema ---
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# --- CLI / MCP ---
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
clap_mangen = "0.3"
rmcp = { version = "2.0", features = ["server", "macros", "transport-io"] }

# --- CLI UX ---
comfy-table = "7"
directories = "6"
indicatif = "0.18"
inquire = { version = "0.7", features = ["fuzzy"] }
notify-debouncer-mini = "0.6"
open = "5"
owo-colors = { version = "4", features = ["supports-colors"] }
toml = "0.8"

# --- errors / logging ---
anyhow = "1"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# --- dev / testing ---
insta = { version = "1", features = ["yaml", "json"] }
tempfile = "3"
wiremock = "0.6"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

wildcard_imports = "deny"
mod_module_files = "deny"
or_fun_call = "deny"
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
allow_attributes_without_reason = "deny"
disallowed_macros = "deny"
disallowed_types = "deny"
disallowed_methods = "deny"

module_name_repetitions = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"
elided_lifetimes_in_paths = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
static_mut_refs = "deny"
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "warn"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
