[package]
name = "ghost-cms-cli"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for publishing Markdown to a Ghost CMS blog."
publish = false

[[bin]]
name = "ghost-cms"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
comfy-table.workspace = true
ghost-cms-core.workspace = true
ghost-cms-shared.workspace = true
indicatif.workspace = true
inquire.workspace = true
miette.workspace = true
notify-debouncer-mini.workspace = true
open.workspace = true
owo-colors.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2"
insta.workspace = true
predicates = "3"
tempfile.workspace = true
wiremock.workspace = true

[lints]
workspace = true
