[package]
name = "ghost-cms-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library for publishing to a Ghost CMS blog via the Admin API (Staff Access Token)."
publish = false

[lib]
name = "ghost_cms_core"
path = "src/lib.rs"

[dependencies]
comrak.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
wiremock.workspace = true

[lints]
workspace = true
