[package]
name = "ghost-cms-mcp"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model Context Protocol (stdio) server exposing Ghost CMS publishing tools."
publish = false

# serde_json is referenced only inside rmcp's `#[tool]` macro expansion, which
# cargo-machete's source scan cannot see — keep it and tell machete it is used.
[package.metadata.cargo-machete]
ignored = ["serde_json"]

[[bin]]
name = "ghost-cms-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ghost-cms-core.workspace = true
ghost-cms-shared.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
